# document-cleaning-3.0

./: .gitignore  README.md  load_dataset.py  pyproject.toml
src/: run_autoencoder.py  runpod_train.py  train_autoencoder.py
src/dataset_maker/: PairedPDFBuilder.py
src/models/: autoencoder.py  swinir.py
tests/: test_paired_pdf_dataset.py
